@@ -5,6 +5,7 @@
 * Fixed issue with empty page appeared after redirection to protected page
 * Fixed issue with coupon used count incrementation when 100% discount coupon is used
 * Fixed issue with broken subscription URLs at registration form when ?id= permalink is used
+* Implemented ability to test rules in an URL group
 
 == 3.4.5 ==
 
